# pico2350-template

./: Cargo.toml  build.rs  cargo-generate.toml
.cargo/: config.toml
cargo-generate/: prehook.rhai
src/: main.rs
